infor card page

--- a/public/admin.html
+++ b/public/admin.html
@@ -16,14 +16,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/base.css">
-    <link rel="stylesheet" href="../navigation_css/toast.css">
-    <link rel="stylesheet" href="../css/keyframes.css">
-    <link rel="stylesheet" href="../navigation_css/chatbox.css">
-    <link rel="stylesheet" href="../navigation_css/admin.css">
-    <link rel="stylesheet" href="../navigation_css/login.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./navigation_css/toast.css">
+    <link rel="stylesheet" href="./css/keyframes.css">
+    <link rel="stylesheet" href="./navigation_css/chatbox.css">
+    <link rel="stylesheet" href="./navigation_css/admin.css">
+    <link rel="stylesheet" href="./navigation_css/login.css">
     <!-- <link rel="stylesheet" href="./navigation_css/promotion.css"> -->
     <title>GYMZ - Thể hình giới trẻ</title>
 
@@ -31,11 +31,11 @@
 </head>
 
 <body>
-    <div class="error">
+    <!-- <div class="error">
         <p>
             không khả rụng
         </p>
-    </div>
+    </div> -->
     <div class="app">
         <!-- LUU SY TRUONG -->
         <div class="header">
@@ -566,9 +566,9 @@
     <div class="nen_mo"></div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script type="module" src="./admin.js"></script>
+    <!-- <script type="module" src="./admin.js"></script> -->
     <script src="../navigation_javascript/menuv2.js"></script>
-    <script src="./src/app.js"></script>
+    <!-- <script src="./src/app.js"></script> -->
     <!-- <script src="/navigation_javascript/chatbox.js"></script> -->
 </body>
 
