--- a/public/admin.html
+++ b/public/admin.html
@@ -183,7 +183,7 @@
                                     Đăng xuất
                                 </span>
                             </li>
-                        </di>
+                            </di>
                     </ul>
                 </div>
                 <div class="shadow"></div>
@@ -216,11 +216,11 @@
                                         <ion-icon class="msgr-search-input-icon" name="search-sharp">
                                         </ion-icon>
                                         <input id="searchInput" class="msgr-search-input-text" type="text"
-                                            placeholder="Tìm kiếm trên chatbox" autocomplete="nope">
+                                            placeholder="Tìm kiếm đoạn chat" autocomplete="nope">
                                     </div>
                                 </div>
                                 <ul class="msg-list">
-                                    <li class="msg-box">
+                                    <!-- <li class="msg-box">
                                         <div class="box-top">
                                             <div class="user-box">
                                                 <div class="user-avt">
@@ -256,44 +256,7 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                    </li>
-                                    <li class="msg-box">
-                                        <div class="box-top">
-                                            <div class="user-box">
-                                                <div class="user-avt">
-                                                    <img src="./img/icon/ico-avt.png" alt="">
-                                                </div>
-                                                <div class="user-ifm">
-                                                    <span class="user-ifm-name">
-                                                        LE VAN TIEN
-                                                    </span>
-                                                    <span class="user-ifm-card">
-                                                        MT:
-                                                        <span class="user-ifm-card-number">
-                                                            MT02
-                                                        </span>
-                                                    </span>
-                                                </div>
-                                            </div>
-                                            <div class="more-option">
-                                                <button class="more-option-bt">
-                                                    <ion-icon class="more-option-bt-icon" name="ellipsis-horizontal-sharp">
-                                                    </ion-icon>
-                                                </button>
-                                            </div>
-                                        </div>
-                                        <div class="box-bot bot-bar">
-                                            <ul class="bot-bar-menu">
-                                                <li class="bot-bar-item">
-                                                    <span class="bot-bar-item-text">
-                                                        Xoá
-                                                        <ion-icon class="bot-bar-item-icon" name="trash-sharp">
-                                                        </ion-icon>
-                                                    </span>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>
                             <div class="msgr-box-right">
@@ -311,7 +274,7 @@
                                             </div>
                                             <div class="user-ifm">
                                                 <div class="chatbox__head__title">
-                                                    Nguyễn Thị Vân
+                                                    ....
                                                 </div>
                                                 <div class="chatbox__head__active">
                                                     <span class="chatbox__head__active__text">
@@ -323,18 +286,20 @@
                                     </div>
                                     <div class="chatbox__message">
                                         <ul class="chatbox__message__list">
-                                            <li class="chatbox__message__item chatbox__message__item__left">
+                                            <!-- <li class="chatbox__message__item chatbox__message__item__left">
                                                 <span class="chatbox__message__item__text">
                                                     Em chào anh/chị Em có thể giúp gì được anh chị ạ!
                                                 </span>
-                                            </li>
+                                            </li> -->
                                         </ul>
                                     </div>
                                     <div class="chatbox__bottom">
                                         <div class="chatbox__bottom__link-social">
                                             <div class="chatbox__bottom__link-social__mess">
-                                                <a href="https://www.messenger.com/t/172967089240726/" class="chatbox__bottom__link-social__mess">
-                                                    <img class="messenger_ico" src="./img/icon/messenger_ico.png" alt="messenger">
+                                                <a href="https://www.messenger.com/t/172967089240726/"
+                                                    class="chatbox__bottom__link-social__mess">
+                                                    <img class="messenger_ico" src="./img/icon/messenger_ico.png"
+                                                        alt="messenger">
                                                 </a>
                                             </div>
                                         </div>
@@ -343,14 +308,15 @@
                                                 <div class="input-scroll">
                                                     <div class="input-overflow">
                                                         <!-- <input type="search" autocomplete="off"> -->
-                                                        <textarea id="myTextarea" rows="1" cols="20" placeholder="Aa"></textarea>
+                                                        <textarea id="myTextarea" rows="1" cols="20"
+                                                            placeholder="Aa"></textarea>
                                                         <!-- <i class='bx bxs-send' ></i> -->
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="chatbox__bottom__send">
-                                            <i class='bx bxs-send' ></i>
+                                            <i class='bx bxs-send'></i>
                                         </div>
                                     </div>
                                 </div>
@@ -385,10 +351,10 @@
                                 <div class="head-end" style="display: flex; justify-content: space-between;">
                                     <button class="container__show__find__btn">Tìm kiếm</button>
                                     <button id="add-account"
-                                    class="container__show__add__btn container__show__account__add__btn"
-                                    onclick="addAccount()">
-                                    Thêm tài khoản
-                                </button>
+                                        class="container__show__add__btn container__show__account__add__btn"
+                                        onclick="addAccount()">
+                                        Thêm tài khoản
+                                    </button>
                                 </div>
                             </div>
                             <!-- <i class="remove-icon fa-solid fa-trash"></i> -->
@@ -497,7 +463,7 @@
                         <div class="container__show__head container__show__calendar__head">
                             <div class="container__show__head__input__box container__show__calendar__head__input__box">
                                 <i class="exit--search fa-solid fa-arrow-left"></i>
-                                <input class="show__input__id" type="text" oninput="findByIDCalendar(this)"
+                                <input class="show__input__id" type="text"
                                     placeholder="Nhập mã thẻ hoặc tên khách hàng">
                                 <div class="show__find__id__box">
                                 </div>
@@ -580,12 +546,14 @@
     </div>
 
     <div class="nen_mo"></div>
+    <script src="/socket.io/socket.io.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <!-- <script type="module" src="./admin.js"></script> -->
     <script src="../navigation_javascript/menuv2.js"></script>
-    <!-- <script src="./src/app.js"></script> -->
-    <!-- <script src="/navigation_javascript/chatbox.js"></script> -->
+    <script src="./src/app.js"></script>
+    <script type="module" src="./admin.js"></script>
 </body>
 
 </html>
