--- a/public/navigation/chatbox.html
+++ b/public/navigation/chatbox.html
@@ -179,7 +179,7 @@
                         </div>
                         <div class="user-ifm">
                             <div class="chatbox__head__title">
-                                Nguyễn Thị Vân
+                                ___
                             </div>
                             <div class="chatbox__head__active">
                                 <span class="chatbox__head__active__text">
@@ -191,11 +191,11 @@
                 </div>
                 <div class="chatbox__message">
                     <ul class="chatbox__message__list">
-                        <li class="chatbox__message__item chatbox__message__item__left">
+                        <!-- <li class="chatbox__message__item chatbox__message__item__left">
                             <span class="chatbox__message__item__text">
                                 Em chào anh/chị Em có thể giúp gì được anh chị ạ!
                             </span>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="chatbox__bottom">
